<resources>
    <string name="app_name">Bed Shema</string>
    <string name="bed_shema_first_benediction">בָּרוּךְ אַתָּה יְיָ אֱלֹקֵינוּ מֶלֶך הָעוֹלָם הַמַּפִּיל חֶבְלֵי שֵׁנָה עַל עֵינַי, וּתְנוּמָה עַל עַפְעַפַּי. ִיהִי רָצוֹן מִלְּפָנֶיךָ יְיָ אֱלֹקַי וֵאלֹקֵי אֲבוֹתַי, שֶתַּשְׁכִּיבֵנִי לְשָׁלוֹם וְתַעֲמִידֵנִי לְשָׁלוֹם. וְאַל יְבַהֲלוּנִי רַעְיוֹנַי וַחֲלוֹמוֹת רָעִים וְהִרְהוּרִים רָעִים, וּתְהֵא מִטָּתִי שְׁלֵמָה לְפָנֶיךָ. וְהָאֵר עֵינַי פֶּן אִישַׁן הַמָּוֶת. בָּרוּך אַתָּה יְיָ הַמֵּאִיר לָעוֹלָם כֻּלּוֹ בִּכְבוֹדוֹ.</string>
    <string name="bed_shema_shema_intro">אֵל מֶלֶךְ נֶאֱמָן</string>
    <string name="bed_shema_shema">שְׁמַע יִשרָאֵל ה\' אֱלהֵינוּ ה\' אֶחָד:</string>
    <string name="bed_shema_shema_baruch_shem_kevod">בָּרוּךְ שֵׁם כְּבוד מַלְכוּתו לְעולָם וָעֶד:</string>
    <string name="bed_shema_shema_firstparagraph">וְאָהַבְתָּ אֵת ה\' אֱלהֶיךָ בְּכָל לְבָבְךָ וּבְכָל נַפְשְׁךָ וּבְכָל מְאדֶךָ: וְהָיוּ הַדְּבָרִים הָאֵלֶּה אֲשֶׁר אָנכִי מְצַוְּךָ הַיּום עַל לְבָבֶךָ: וְשִׁנַּנְתָּם לְבָנֶיךָ וְדִבַּרְתָּ בָּם בְּשִׁבְתְּךָ בְּבֵיתֶךָ וּבְלֶכְתְּךָ בַדֶּרֶךְ וּבְשָׁכְבְּךָ וּבְקוּמֶךָ: וּקְשַׁרְתָּם לְאות עַל יָדֶךָ וְהָיוּ לְטטָפת בֵּין עֵינֶיךָ: וּכְתַבְתָּם עַל מְזֻזות בֵּיתֶךָ וּבִשְׁעָרֶיךָ:</string>
    <string name="bed_shema_tehilim_01">יֹשֵׁב בְּסֵתֶר עֶלְיוֹן בְּצֵל שַׁדַּי יִתְלוֹנָן: אֹמַר לַיהוָה מַחְסִי וּמְצוּדָתִי, אֱלֹהַי אֶבְטַח בּוֹ: כִּי הוּא יַצִּילְךָ מִפַּח יָקוּשׁ, מִדֶּבֶר הַוּוֹת: בְּאֶבְרָתוֹ יָסֶךְ לָךְ וְתַחַת כְּנָפָיו תֶּחְסֶה, צִנָּה וְסֹחֵרָה אֲמִתּוֹ: לֹא תִירָא מִפַּחַד לָיְלָה, מֵחֵץ יָעוּף יוֹמָם: מִדֶּבֶר בָּאֹפֶל יַהֲלֹך,ְ מִקֶּטֶב יָשׁוּד צָהֳרָיִם: יִפֹּל מִצִּדְּךָ אֶלֶף וּרְבָבָה מִימִינֶךָ, אֵלֶיךָ לֹא יִגָּשׁ: רַק בְּעֵינֶיךָ תַבִּיט, וְשִׁלֻּמַת רְשָׁעִים תִּרְאֶה: כִּי אַתָּה יְהוָה מַחְסִי.</string>
    <string name="bed_shema_tehilim_02"> יְהוָה מָה רַבּוּ צָרָי רַבִּים קָמִים עָלָי: רַבִּים אֹמְרִים לְנַפְשִׁי, אֵין יְשׁוּעָתָה לּוֹ בֵאלֹהִים סֶלָה: וְאַתָּה יְהוָה מָגֵן בַּעֲדִי, כְּבוֹדִי וּמֵרִים רֹאשִׁי: קוֹלִי אֶל יְהוָה אֶקְרָא, וַיַּעֲנֵנִי מֵהַר קָדְשׁוֹ סֶלָה: אֲנִי שָׁכַבְתִּי וָאִישָׁנָה, הֱקִיצוֹתִי כִּי יְהוָה יִסְמְכֵנִי: לֹא אִירָא מֵרִבְבוֹת עָם, אֲשֶׁר סָבִיב שָׁתוּ עָלָי: קוּמָה יְהוָה הוֹשִׁיעֵנִי אֱלֹהַי כִּי הִכִּיתָ אֶת כָּל אֹיְבַי לֶחִי, שִׁנֵּי רְשָׁעִים שִׁבַּרְתָּ: לַיהוָה הַיְשׁוּעָה.</string>
    <string name="bed_shema_tehilim_03">הַשְׁכִּיבֵנוּ יְיָ אֱלֹהֵינוּ לְשָׁלוֹם, וְהַעֲמִידֵנוּ מַלְכֵּנוּ לְחַיִּים, וּפְרוֹשׂ עָלֵינוּ סֻכַּת שְׁלוֹמֶךָ, וְתַקְּנֵנוּ בְּעֵצָה טוֹבָה מִלְּפָנֶיךָ, וְהוֹשִׁיעֵנוּ לְמַעַן שְׁמֶךָ. וְהָגֵן בַּעֲדֵנוּ, וְהָסֵר מֵעָלֵינוּ אוֹיֵב דֶּבֶר וְחֶרֶב וְרָעָב וְיָגוֹן, וְהָסֵר שָׂטָן מִלְּפָנֵינוּ וּמֵאַחֲרֵינוּ, וּבְצֵל כְּנָפֶיךָ תַּסְתִּירֵנוּ. כִּי אֵל שׁוֹמְרֵנוּ וּמַצִּילֵנוּ אָתָּה, כִּי אֵל מֶלֶךְ חַנּוּן וְרַחוּם אָתָּה, וּשְׁמוֹר צֵאתֵנוּ וּבוֹאֵנוּ לְחַיִּים וּלְשָׁלוֹם מֵעַתָּה וְעַד עוֹלָם.</string>
    <string name="bed_shema_tehilim_04">בָּרוּךְ יְיָ בַּיּוֹם, בָּרוּךְ יְיָ בַּלָּיְלָה, בָּרוּךְ יְיָ בְּשָׁכְבֵנוּ, בָּרוּךְ יְיָ בְּקוּמֵנוּ. כִּי בְּיָדְךָ נַפְשׁוֹת הַחַיִּים וְהַמֵּתִים. אֲשֶׁר בְּיָדוֹ נֶפֶשׁ כָּל חָי, וְרוּחַ כָּל בְּשַׂר אִישׁ: בְּיָדְךָ אַפְקִיד רוּחִי, פָּדִיתָה אוֹתִי יְהוָה אֵל אֱמֶת: אֱלֹקֵינוּ שֶׁבַּשָּׁמַיִם יַחֵד שִׁמְךָ, וְקַיֵּם מַלְכוּתְךָ תָּמִיד, וּמְלֹך עָלֵינוּ לְעוֹלָם וָעֶד.</string>
    <string name="bed_shema_tehilim_05">יִרְאוּ עֵינֵינוּ וְיִשְׂמַח לִבֵּנוּ וְתָגֵל נַפְשֵׁנוּ בִּישׁוּעָתְךָ בֶּאֱמֶת, בֶאֱמֹר לְצִיּוֹן מָלַך אֱלֹהָיִךְ. יְיָ מֶלֶךְ. יְיָ מָלַךְ. יְיָ יִמְלֹךְ לְעוֹלָם וָעֶד: כִּי הַמַּלְכוּת שֶׁלְּךָ הִיא, וּלְעוֹלְמֵי עַד תִמְלֹךְ בְּכָבוֹד, כֵּי אֵין לָנוּ מֶלֶךְ אֶלָּא אָתָּה.</string>
    <string name="bed_shema_tehilim_06">הַמַּלְאָךְ הַגֹּאֵל אֹתִי מִכָּל רָע יְבָרֵךְ אֶת הַנְּעָרִים, וְיִקָּרֵא בָהֶם שְׁמִי, וְשֵׁם אֲבֹתַי אַבְרָהָם וְיִצְחָק, וְיִדְגּוּ לָרֹב בְּקֶרֶב הָאָרֶץ: וַיֹּאמֶר, אִם שָׁמוֹעַ תִּשְׁמַע לְקוֹל יְהוָה אֱלֹהֶיךָ וְהַיָּשָׁר בְּעֵינָיו תַּעֲשֶׂה וְהַאֲזַנְתָּ לְמִצְו‍ֹתָיו וְשָׁמַרְתָּ כָּל חֻקָּיו, כָּל הַמַּחֲלָה אֲשֶׁר שַׂמְתִּי בְמִצְרַיִם לֹא אָשִׂים עָלֶיךָ כִּי אֲנִי יְהוָה רֹפְאֶךָ: וַיֹּאמֶר יְהוָה אֶל הַשָּׂטָן, יִגְעַר יְהוָה בְּךָ הַשָּׂטָן וְיִגְעַר יְהוָה בְּךָ הַבֹּחֵר בִּירוּשָׁלָ‍ִם, הֲלוֹא זֶה אוּד מֻצָּל מֵאֵשׁ: הִנֵּה מִטָּתוֹ שֶׁלִּשְׁלֹמֹה שִׁשִּׁים גִּבֹּרִים סָבִיב לָהּ, מִגִּבֹּרֵי יִשְׂרָאֵל: כֻּלָּם אֲחֻזֵי חֶרֶב מְלֻמְּדֵי מִלְחָמָה, אִישׁ חַרְבּוֹ עַל יְרֵכוֹ מִפַּחַד בַּלֵּילוֹת:</string>
    <string name="bed_shema_tehilim_07">יְבָרֶכְךָ יְהוָה וְיִשְׁמְרֶךָ. יָאֵר יְהוָה פָּנָיו אֵלֶיךָ וִיחֻנֶּךָּ: כו יִשָּׂא יְהוָה פָּנָיו אֵלֶיךָ וְיָשֵׂם לְךָ שָׁלוֹם.</string>
    <string name="bed_shema_tehilim_08">הִנֵּה לֹא יָנוּם וְלֹא יִישָׁן שׁוֹמֵר יִשְׂרָאֵל:</string>
    <string name="bed_shema_tehilim_09">לִישׁוּעָתְךָ קִוִּיתִי יי. קִוִּיתִי יי לִישׁוּעָתְךָ. יי לִישׁוּעָתְךָ קִוִּיתִי.</string>
    <string name="bed_shema_tehilim_10">בְּשֵׁם יְיָ אֱלֹקֵי יִשְׂרָאֵל, מִימִינִי מִיכָאֵל, וּמִשְּׂמֹאלִי גַבְרִיאֵל, וּמִלְּפָנַי אוּרִיאֵל, וּמֵאֲחוֹרַי רְפָאֵל, וְעַל רֹאשִׁי שְׁכִינַת אֵל.</string>
    <string name="bed_shema_tehilim_11"> שִׁיר הַמַּעֲלוֹת, אַשְׁרֵי כָּל יְרֵא יְהוָה, הַהֹלֵךְ בִּדְרָכָיו: יְגִיעַ כַּפֶּיךָ כִּי תֹאכֵל, אַשְׁרֶיךָ וְטוֹב לָךְ: אֶשְׁתְּךָ כְּגֶפֶן פֹּרִיָּה בְּיַרְכְּתֵי בֵיתֶךָ, בָּנֶיךָ כִּשְׁתִלֵי זֵיתִים סָבִיב לְשֻׁלְחָנֶךָ: הִנֵּה כִי כֵן יְבֹרַךְ גָּבֶר, יְרֵא יְהוָה: יְבָרֶכְךָ יְהוָה מִצִּיּוֹן, וּרְאֵה בְּטוּב יְרוּשָׁלָ‍ִם כֹּל יְמֵי חַיֶּיךָ: וּרְאֵה בָנִים לְבָנֶיךָ, שָׁלוֹם עַל יִשְׂרָאֵל:</string>
    <string name="bed_shema_tehilim_12">רִגְזוּ וְאַל תֶּחֱטָאוּ, אִמְרוּ בִלְבַבְכֶם עַל מִשְׁכַּבְכֶם, וְדֹמּוּ סֶלָה:</string>
    <string name="bed_shema_tehilim_13">אֲדוֹן עוֹלָם אֲשֶׁר מָלַךְ, בְּטֶרֶם כָּל יְצִיר נִבְרָא. לְעֵת נַעֲשָׂה בְּחֶפְצוֹ כָּל, אֲזַי מֶלֶךְ שְׁמוֹ נִקְרָא. וְאַחֲרֵי כִּכְלּוֹת הַכֹּל, לְבַדּוֹ יִמְלֹךְ נוֹרָא. וְהוּא הָיָה וְהוּא הֹוֶה, וְהוּא יִהְיֶה בְּתִפְאֲרָה. וְהוּא אֶחָד וְאֵין שֵׁנִי, לְהַמְשִׁיל לוֹ לְהַחְבִּירָה. בְּלִי רֵאשִׁית בְּלִי תַּכְלִית, וְלוֹ הָעֹז וְהַמִּשְׂרָה. וְהוּא אֱלִי וְחַי גּוֹאֲלִי, וְצוּר חֶבְלִי בְּיוֹם צָרָה. וְהוּא נִסִּי וּמָנוֹס לִי, מְנַת כּוֹסִי בְּיּוֹם אֶקְרָא. בְּיָדוֹ אַפְקִיד רוּחִי, בְּעֵת אִישַׁן וְאָעִירָהּ. וְעִם רוּחִי גְּוִיָּתִי, יְיָ לִי וְלֹא אִירָא.</string>
    <string name="shema_english">Bed Shema</string>
    <string name="contact">Contact</string>
    <string name="tphilath_bh_english">Tphilath BH</string>
    <string name="preparatory_prayers_title">Preparatory Prayers</string>
    <string name="travel_prayer_title">Travel Prayer</string>
</resources>